work: main banner & informative section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,53 @@
         <button class="budget-button">Solicitar orçamento</button>
       </div>
     </header>
+
+    <section class="main-banner">
+      <div class="main-banner-content container">
+        <h1>EngeUrb</h1>
+        <span>Construções modernas e acessíveis</span>
+        <p>
+          Desde 1973 sendo referência nacional em construção civil, arquitetura e design.
+          Contamos com uma equipe completa para te oferecer as melhores soluções em engenharia.
+        </p>
+      </div>
+    </section>
+
+    <section class="informative-container container">
+      <h2 class="informative-container-title">
+        Muito mais do que obras vendemos <span>sonhos</span>
+      </h2>
+
+      <div class="informative-content">
+        <div class="informative-text">
+          <h3>Engenharia em Vidros e Alumínio</h3>
+          <p>
+            O conceito de engenharia significa a utilização de ideias e práticas para desenhar, 
+            construir e tornar algo melhor. Nós da EngeUrb contamos com uma equipe de profissionais 
+            capacitados e com experiência, e temos o objetivo de tornar qualquer espaço da sua 
+            casa em algo aconchegante e bonito. Independente do espaço, altura e ideia, temos o 
+            melhor produto para você! Venha conhecer de perto esse novo conceito!
+          </p>
+          <div class="informative-text-footer">
+            <button>Saiba mais</button>
+            <span>
+              Um novo 
+              <span class="highlited">conceito</span> 
+              em seu projeto.
+            </span>
+          </div>
+        </div>
+
+        <div class="informative-images">
+          <div class="main-image">
+            <img src="./assets/informative-one.jpg" alt="EngeUrb" />
+          </div>
+          <div class="secondary-image">
+            <img src="./assets/informative-two.jpg" alt="EngeUrb" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 
   <script src="./scripts.js"></script>
