work: specialties & highlighted section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,98 @@
         </div>
       </div>
     </section>
+
+    <section class="specialties-container">
+      <div class="specialties-content container">
+        <h2 class="specialties-title">
+          Nossas especialidades
+        </h2>
+
+        <ul class="specialties-items">
+          <li>
+            <img src="./assets/guarda-corpo.jpg" alt="Guarda corpo de vidro" />
+            <h3><span>Guarda corpo</span> de vidro</h3>
+          </li>
+
+          <li>
+            <img src="./assets/box.jpg" alt="Box" />
+            <h3><span>Box</span> moderno</h3>
+          </li>
+
+          <li>
+            <img src="./assets/cozinha.jpg" alt="Cozinha" />
+            <h3><span>Cozinha</span> sob medida</h3>
+          </li>
+
+          <li>
+            <img src="./assets/divisorias.jpg" alt="Divisórias de vidro" />
+            <h3><span>Divisórias</span> de vidro</h3>
+          </li>
+
+          <li>
+            <img src="./assets/piscina.jpg" alt="Área de lazer" />
+            <h3><span>Área de lazer</span> completa</h3>
+          </li>
+
+          <li>
+            <img src="./assets/sala-sob-medida.jpg" alt="Escritórios" />
+            <h3><span>Escritórios</span> exclusivos</h3>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="highlighted-services">
+      <h2 class="highlighted-services-title container">
+        Serviços em destaque
+      </h2>
+
+      <ul>
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+
+        <li>
+          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+          <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      
+    </footer>
   </body>
 
   <script src="./scripts.js"></script>
