work: initial responsive

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&family=Oleo+Script:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/modal.css">
 
     <title>EngeUrb</title>
   </head>
@@ -126,44 +129,44 @@
         Serviços em destaque
       </h2>
 
-      <ul>
-        <li>
+      <ul class="highlighted-services-items">
+        <li class="highlighted-services-item">
           <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
 
-        <li>
-          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+        <li class="highlighted-services-item">
+          <img src="./assets/service2.jpg" alt="Service 2" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
 
-        <li>
-          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+        <li class="highlighted-services-item">
+          <img src="./assets/service3.jpg" alt="Service 3" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
 
-        <li>
-          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+        <li class="highlighted-services-item">
+          <img src="./assets/service4.jpg" alt="Service 4" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
 
-        <li>
-          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+        <li class="highlighted-services-item">
+          <img src="./assets/service5.jpg" alt="Service 5" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
 
-        <li>
-          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+        <li class="highlighted-services-item">
+          <img src="./assets/service6.jpg" alt="Service 6" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
 
-        <li>
-          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+        <li class="highlighted-services-item">
+          <img src="./assets/service7.jpg" alt="Service 7" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
 
-        <li>
-          <img src="./assets/service1.jpg" alt="Service 1" class="service-image" />
+        <li class="highlighted-services-item">
+          <img src="./assets/service8.jpg" alt="Service 8" class="service-image" />
           <img src="./assets/search-icon.svg" alt="Search icon" class="search-icon" />
         </li>
       </ul>
@@ -248,7 +251,13 @@
         </span>
       </div>
     </div>
+
+    <div class="back-to-top-button">
+      <a href="#">
+        <span class="material-icons">keyboard_arrow_up</span>
+      </a>
+    </div>
   </body>
 
-  <script src="./scripts.js"></script>
+  <script src="./scripts/scripts.js"></script>
 </html>
