responsive to test

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <img src="./assets/logo-company.png" alt="EngeUrb" class="logo-company" />
 
         <nav class="nav-bar-section">
-          <span class="material-icons menu-hamb-button hide-on-desktop">menu</span>
+          <!-- <span class="material-icons menu-hamb-button hide-on-desktop">menu</span> -->
+          <div class="menu-hamb-button hide-on-desktop">
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+          </div>
 
           <ul>
             <li><a href="">Início</a></li>
@@ -58,7 +63,10 @@
           </ul>
         </nav>
 
-        <button class="budget-button">Solicitar orçamento</button>
+        <button class="budget-button hide-on-mobile">Solicitar orçamento</button>
+        <a href="tel:014 3622-2222" class="call-button" target="_blank">
+          <span class="material-icons hide-on-desktop">call</span>
+        </a>
       </div>
     </header>
 
@@ -100,10 +108,10 @@
 
         <div class="informative-images">
           <div class="main-image">
-            <img src="./assets/informative-one.jpg" alt="EngeUrb" />
+            <img src="./assets/informative-two.jpg" alt="EngeUrb" />
           </div>
           <div class="secondary-image">
-            <img src="./assets/informative-two.jpg" alt="EngeUrb" />
+            <img src="./assets/informative-one.jpg" alt="EngeUrb" />
           </div>
         </div>
       </div>
