work: first version of page

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           </div>
 
           <ul>
-            <li><a href="">Início</a></li>
-            <li><a href="">Especialidades</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#">Início</a></li>
+            <li><a href="#specialties">Especialidades</a></li>
+            <li><a href="#services">Serviços</a></li>
+            <li><a href="#contact">Contato</a></li>
             <div class="header-social-media hide-on-desktop">
               <h3>Acompanhe nossas redes sociais</h3>
 
@@ -119,6 +119,8 @@
 
     <section class="specialties-container">
       <div class="specialties-content container">
+        <div id="specialties"></div>
+
         <h2 class="specialties-title">
           Nossas especialidades
         </h2>
@@ -158,6 +160,8 @@
     </section>
 
     <section class="highlighted-services">
+      <div id="services"></div>
+
       <h2 class="highlighted-services-title container">
         Serviços em destaque
       </h2>
@@ -206,6 +210,8 @@
     </section>
 
     <footer>
+      <div id="contact"></div>
+      
       <div class="footer-container container">
         <div class="footer-content">
           <!-- <img src="./assets/logo-company.png" alt="EngeUrb" class="logo-company" /> -->
