update: link developed by

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <div class="footer-bottom-area-content container">
         <span class="rights">EngeUrb® | Todos os direitos reservados</span>
         <span class="developed-by">
-          <a href="https://www.linkedin.com/in/gustavo-polonio-04b77a169/" target="_blank">
+          <a href="https://gustavo-polonio.herokuapp.com/" target="_blank">
             Desenvolvido por <b>Gustavo Polonio</b>
           </a>
         </span>
